--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+/*
 body {
 	background-color: #040F1F;
 	text: #446392;
@@ -15,6 +16,45 @@ md-tabs {
 md-content {
 	background-color: #87A1C7;
 }
+*/
+
+/*
+body {
+	background-color: #1F080B;
+}
+
+h1 {
+	color: #fff;
+}
+
+md-tabs {
+	background: #60000D;
+	color: #000;
+}
+
+md-content {
+	background-color: #2C0107;
+}
+
+p, label, input, md-input-container {
+	color: #fff;
+}
+
+input::-webkit-input-placeholder{
+    color: #fff;
+}
+input:-moz-placeholder {
+    color: #fff;
+}
+
+input[type=text] {
+	color: #fff;
+}
+
+.md-input {
+	border-color: #fff;
+}
+*/
 
 /*
 .tabsdemoDynamicHeight md-content {
@@ -35,8 +75,8 @@ md-content {
 }
 */
 
+/*
 .listdemoListControls {
-/* Add some right padding so that the text doesn't overlap the buttons */ }
 .listdemoListControls md-divider {
 	margin-top: 10px;
 	margin-bottom: 10px; }
@@ -45,12 +85,10 @@ md-content {
 	.listdemoListControls md-list-item .md-list-item-inner > p,
 	.listdemoListControls md-list-item .md-list-item-inner > .md-list-item-inner > p {
 		-webkit-user-select: none;
-		/* Chrome all / Safari all */
 		-moz-user-select: none;
-		/* Firefox all */
 		-ms-user-select: none;
-		/* IE 10+ */
 		user-select: none;
-	/* Likely future */ }
+	}
 	.listdemoListControls .secondary-button-padding p {
 		padding-right: 100px; }
+*/
