added uninstall button

--- a/views/browse.html
+++ b/views/browse.html
@@ -1,4 +1,4 @@
-<md-content class="md-padding">
+<md-content class="md-padding" ng-scrollbars>
 	<md-content class="md-padding" layout-xs="column" layout="row">
 		<div flex layout="column">
 			<md-card data-ng-repeat="addon in browseController.addons" md-theme="{{ showDarkTheme ? 'dark-grey' : 'default' }}" md-theme-watch>
@@ -16,7 +16,8 @@
 				</md-card-title>
 				<md-card-actions layout="row" layout-align="end center">
 					<md-button data-ng-click="browseController.openWebsite(addon.website)">Website</md-button>
-					<md-button data-ng-click="browseController.install(addon)" data-ng-show="!addon.isDownloading">Install</md-button>
+					<md-button data-ng-click="browseController.install(addon)" data-ng-show="!addon.isDownloading && !addon.isInstalled">Install</md-button>
+					<md-button data-ng-click="browseController.uninstall(addon)" data-ng-show="addon.isInstalled">Uninstall</md-button>
 					<md-progress-circular md-mode="indeterminate" data-ng-show="addon.isDownloading"></md-progress-circular>
 				</md-card-actions>
 			</md-card>
