refactored installer code into its own service

--- a/views/browse.html
+++ b/views/browse.html
@@ -9,6 +9,8 @@
 						<md-chips data-ng-model="addon.tags" readonly="true">
 						</md-chips>
 						<p class="md-body-1">{{addon.description}}</p>
+						<p>Current Version: {{addon.fileVersion}}</p>
+						<p>Installed Version:</p>
 					</md-card-title-text>
 					<md-card-title-media>
 						<div class="md-media-lg card-media"></div>
