refactored the browse view into a directive so it can be reused.

--- a/views/browse.html
+++ b/views/browse.html
@@ -1,3 +1,5 @@
+
+
 <div layout="column">
 	<md-input-container class="md-block">
 		<label>Search</label>
@@ -9,27 +11,9 @@
 <md-content class="md-padding">
 	<md-content class="md-padding" layout-xs="column" layout="row">
 		<div flex layout="column">
-			<md-card data-ng-repeat="addon in browseController.addons | filter:browseController.searchQuery" md-theme="{{ showDarkTheme ? 'dark-grey' : 'default' }}" md-theme-watch>
-				<md-card-title>
-					<md-card-title-text>
-						<span class="md-headline">{{addon.name}}</span>
-						<span class="md-subhead">{{addon.author}}</span>
-						<md-chips data-ng-model="addon.tags" readonly="true">
-						</md-chips>
-						<p class="md-body-1">{{addon.description}}</p>
-						<span data-ng-show="addon.failedInstall"><p class="error">Failed to install addon. Please contact <a href="{{addon.website}}/issues">{{addon.author}}</a>.</p></span>
-					</md-card-title-text>
-					<md-card-title-media>
-						<div class="md-media-lg card-media"></div>
-					</md-card-title-media>
-				</md-card-title>
-				<md-card-actions layout="row" layout-align="end center">
-					<md-button data-ng-click="browseController.openWebsite(addon.website)" class="md-raised">Website</md-button>
-					<md-button data-ng-click="browseController.install(addon)" class="md-raised" data-ng-class="{'md-warn': addon.failedInstall}" data-ng-show="!addon.isDownloading && !addon.isInstalled">Install</md-button>
-					<md-button data-ng-click="browseController.uninstall(addon)" class="md-raised" data-ng-show="addon.isInstalled && !addon.failedInstall">Uninstall</md-button>
-					<md-progress-circular md-mode="indeterminate" data-ng-show="addon.isDownloading"></md-progress-circular>
-				</md-card-actions>
-			</md-card>
+			<div data-ng-repeat="addon in browseController.addons | filter:browseController.searchQuery">
+				<addon addon="addon"></addon>
+			</div>
 		</div>
 	</md-content>
 </md-content>
