--- a/views/settings.html
+++ b/views/settings.html
@@ -10,7 +10,7 @@
 					<md-button class="md-raised" ng-click="vm.browseForDirectory();">Browse...</md-button>
 				</md-input-container>
 			</div>
-			<span data-ng-show="!vm.isValidDirectory();"><p class="error">Invalid Tree of Savior directory.</p></span>
+			<span data-ng-show="!vm.isValidDirectory();"><p class="error">Invalid directory. Please set your proper Tree of Savior directory before continuing.</p></span>
 		</form>
 	</md-content>
 </md-content>
