--- a/views/installed.html
+++ b/views/installed.html
@@ -1,1 +1,9 @@
-<h1>Installed</h1>
+<md-content class="md-padding">
+	<md-content class="md-padding" layout-xs="column" layout="row">
+		<div flex layout="column">
+			<div data-ng-repeat="addon in vm.installedAddons">
+				<addon addon="addon"></addon>
+			</div>
+		</div>
+	</md-content>
+</md-content>
