--- a/views/addon.html
+++ b/views/addon.html
@@ -7,7 +7,7 @@
 			</md-chips>
 			<p class="md-body-1">{{vm.addon.description}}</p>
 			<span class="md-body-1" data-ng-show="vm.addon.isInstalled">Installed version: {{vm.addon.installedFileVersion}}</span>
-			<span class="md-body-1">Current version: {{vm.addon.fileVersion}}</span>
+			<span class="md-body-1">Available version: {{vm.addon.fileVersion}}</span>
 			<span data-ng-show="vm.addon.failedInstall"><p class="error">Failed to install addon. Please contact <a href data-ng-click="openIssues(vm.addon);">{{vm.addon.author}}</a>.</p></span>
 			<span data-ng-show="vm.addon.uninstallError"><p class="error">Could not uninstall addon. Make sure the game is closed and then try again.</p></span>
 		</md-card-title-text>
