--- a/views/addon.html
+++ b/views/addon.html
@@ -1,4 +1,4 @@
-<md-card>
+<md-card md-whiteframe="5">
 	<md-card-title>
 		<md-card-title-text>
 			<span class="md-headline">{{vm.addon.name}}</span>
