created radio group for all/installed/uninstalled instead of a checkbox for just installed/uninstalled.

--- a/views/browse.html
+++ b/views/browse.html
@@ -4,9 +4,13 @@
 		<input data-ng-model="browseController.searchQuery">
 	</md-input-container>
 	<div layout="row">
-		<md-input-container>
-			<md-checkbox ng-model="browseController.isInstalled" aria-label="Is installed?">Is installed?</md-checkbox>
-		</md-input-container>
+		<md-radio-group layout="row" ng-model="browseController.isInstalled">
+			<md-radio-button data-ng-value="undefined" class="md-primary">All</md-radio-button>
+			<md-radio-button data-ng-value="true">Installed</md-radio-button>
+			<md-radio-button data-ng-value="false">Uninstalled</md-radio-button>
+		</md-radio-group>
+	</div>
+	<div layout="row">
 		<md-input-container>
 			<md-checkbox ng-model="browseController.isUpdateAvailable" aria-label="Is update available?">Is update available?</md-checkbox>
 		</md-input-container>
