--- a/views/settings.html
+++ b/views/settings.html
@@ -1,5 +1,12 @@
 <md-content class="md-padding">
-	<h1 class="md-display-2">Settings</h1>
+	<h2 class="md-display-2">Settings</h2>
+	<p>This Version v<span>{{vm.thisVersion}}</span></p>
+	<div   style="color:red"  data-ng-show="!vm.isLatestVersion()" >
+		<p>Latest Version v<span>{{vm.latestVersion}}</span></p>
+		<h3><strong>You Need Update !!</strong>
+			<a href="https://github.com/JTosAddon/Tree-of-Savior-Addon-Manager/releases">Download</a>
+		</h3>
+	</div>
 	<p><strong>Configure your settings below. Please specify your Tree of Savior install directory.</strong></p>
 	<md-content layout-padding>
 		<form name="userForm">
