--- a/views/addon.html
+++ b/views/addon.html
@@ -1,4 +1,4 @@
-<md-card md-whiteframe="5">
+<md-card md-whiteframe="5" id="{{vm.addon.name}}">
 	<md-card-title>
 		<md-card-title-text>
 			<span class="md-headline">{{vm.addon.name}}
@@ -32,9 +32,9 @@
 
 		<!--<md-button style="background-color:#55acee" >Twitter</md-button>-->
 		<!--<md-button data-ng-click="openWebsite(vm.addon);" class="md-raised">GitHub</md-button>-->
-		<md-button data-ng-click="install(vm.addon);" class="md-raised" data-ng-class="{'md-warn': vm.addon.failedInstall}" data-ng-show="!vm.addon.isDownloading && !vm.addon.isInstalled">Install</md-button>
+		<md-button data-ng-click="install(vm.addon);" class="md-raised md-primary" data-ng-class="{'md-warn': vm.addon.failedInstall}" data-ng-show="!vm.addon.isDownloading && !vm.addon.isInstalled">Install</md-button>
 		<md-button data-ng-click="update(vm.addon);" class="md-raised md-accent" data-ng-class="{'md-warn': vm.addon.failedInstall}" data-ng-show="vm.addon.isUpdateAvailable && vm.addon.isInstalled">Update</md-button>
-		<md-button data-ng-click="uninstall(vm.addon);" class="md-raised" data-ng-show="vm.addon.isInstalled && !vm.addon.failedInstall">Uninstall</md-button>
+		<md-button data-ng-click="uninstall(vm.addon);" class="md-raised md-warn" data-ng-show="vm.addon.isInstalled && !vm.addon.failedInstall">Uninstall</md-button>
 		<md-progress-circular md-mode="indeterminate" data-ng-show="vm.addon.isDownloading"></md-progress-circular>
 	</md-card-actions>
 </md-card>
