--- a/views/browse.html
+++ b/views/browse.html
@@ -1,7 +1,8 @@
 		
 <div layout="column" layout-padding>
 	<md-input-container class="md-block">
-		<label>Search</label>
+	
+		<label><img id = "search"src="img/search.png"  alt="search">Search</label>
 		<input data-ng-model="browseController.searchQuery">
 	</md-input-container>
 	<div layout="row">
