--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,8 @@
 html, body {
 	height: 100%;
 	margin: 0; padding: 0;
+	background-image: '../img/fuckinOnion.png'
+
 }
 
 #wrapper {
@@ -44,4 +46,9 @@ html, body {
   border-radius: 50%;
   box-shadow:0 0px 0px 0 rgba(0,0,0,0);
   background-color:rgba(0,0,0,0)
+}
+#search {
+	width: 24px;
+	height: auto;
+	float:left;
 }
