--- a/views/addon.html
+++ b/views/addon.html
@@ -10,6 +10,7 @@
 			</md-button>
 			</span>
 			<span class="md-subhead">{{vm.addon.author}}</span>
+			<span class="md-subhead">{{vm.addon.dateParsed}}</span>
 			<md-chips data-ng-model="vm.addon.tags" readonly="true">
 			</md-chips>
 			<p class="md-body-1">{{vm.addon.description}}</p>
@@ -27,6 +28,7 @@
 		</md-card-title-media>
 	</md-card-title>
 	<md-card-actions layout="row" layout-align="end center">
+		<md-button  data-ng-show="vm.addon.isNew" class="md-raised" data-ng-click="openReadme(vm.addon);">New</md-button>
 		<md-button  data-ng-show="!vm.addon.isShowReadme" class="md-raised" data-ng-click="openReadme(vm.addon);">OpenReadme</md-button>
 		<md-button  data-ng-show="vm.addon.isShowReadme"  class="md-raised" data-ng-click="closeReadme(vm.addon);">CloseReadme</md-button>
 
