--- a/views/settings.html
+++ b/views/settings.html
@@ -1,7 +1,7 @@
 <md-content class="md-padding">
 	<h2 class="md-display-2">Settings</h2>
-	<p>This Version v<span>{{vm.thisVersion}}</span></p>
 	<div   style="color:red"  data-ng-show="!vm.isLatestVersion()" >
+		<p style="color:black">This Version v<span>{{vm.thisVersion}}</span></p>
 		<p>Latest Version v<span>{{vm.latestVersion}}</span></p>
 		<h3><strong>You Need Update !!</strong>
 			<a href="https://github.com/JTosAddon/Tree-of-Savior-Addon-Manager/releases">Download</a>
