UIの一部を日本語化する (#4)

--- a/views/settings.html
+++ b/views/settings.html
@@ -1,22 +1,22 @@
 <md-content class="md-padding">
-	<h2 class="md-display-2">Settings</h2>
+	<h2 class="md-display-2">設定</h2>
 	<div   style="color:red"  data-ng-show="!vm.isLatestVersion()" >
 		<p style="color:black">This Version v<span>{{vm.thisVersion}}</span></p>
 		<p>Latest Version v<span>{{vm.latestVersion}}</span></p>
-		<h3><strong>You Need Update !!</strong>
-			<a href="https://github.com/JTosAddon/Tree-of-Savior-Addon-Manager/releases">Download</a>
+		<h3><strong>最新のマネージャーにアップデートしてください</strong>
+			<a href="https://github.com/JTosAddon/Tree-of-Savior-Addon-Manager/releases">ダウンロード</a>
 		</h3>
 	</div>
-	<p><strong>Configure your settings below. Please specify your Tree of Savior install directory.</strong></p>
+	<p><strong>Tree of Saviorのインストールフォルダを指定してください。</strong></p>
 	<md-content layout-padding>
 		<form name="userForm">
 			<div layout-gt-sm="row">
 				<md-input-container class="md-block" flex-gt-sm>
 					<span>{{vm.treeOfSaviorDirectory}}</span>
-					<md-button class="md-raised" ng-click="vm.browseForDirectory();">Browse...</md-button>
+					<md-button class="md-raised" ng-click="vm.browseForDirectory();">開く</md-button>
 				</md-input-container>
 			</div>
-			<span data-ng-show="!vm.isValidDirectory();"><p class="error">Invalid directory. Please set your proper Tree of Savior directory before continuing.</p></span>
+			<span data-ng-show="!vm.isValidDirectory();"><p class="error">アドオンをインストールする前に、正しいTree of Saviorのインストールフォルダを指定してください。</p></span>
 		</form>
 	</md-content>
 </md-content>
