--- a/views/addon.html
+++ b/views/addon.html
@@ -29,8 +29,8 @@
 	</md-card-title>
 	<md-card-actions layout="row" layout-align="end center">
 		<md-button  data-ng-show="vm.addon.isNew" class="md-raised" data-ng-click="openReadme(vm.addon);">New</md-button>
-		<md-button  data-ng-show="!vm.addon.isShowReadme" class="md-raised" data-ng-click="openReadme(vm.addon);">OpenReadme</md-button>
-		<md-button  data-ng-show="vm.addon.isShowReadme"  class="md-raised" data-ng-click="closeReadme(vm.addon);">CloseReadme</md-button>
+		<md-button  data-ng-show="!vm.addon.isShowReadme" class="md-raised" data-ng-click="openReadme(vm.addon);">詳細</md-button>
+		<md-button  data-ng-show="vm.addon.isShowReadme"  class="md-raised" data-ng-click="closeReadme(vm.addon);">閉じる</md-button>
 
 		<!--<md-button style="background-color:#55acee" >Twitter</md-button>-->
 		<!--<md-button data-ng-click="openWebsite(vm.addon);" class="md-raised">GitHub</md-button>-->
