--- a/views/browse.html
+++ b/views/browse.html
@@ -8,13 +8,19 @@
 		</md-input-container>
 	</md-card>
 	<md-card  md-whiteframe="3">
-	<div layout="row">
+	<div layout="row"　layout-align=" center">
 		<md-radio-group layout="row" ng-model="browseController.isInstalled">
 			<md-radio-button data-ng-value="undefined" class="md-primary">All</md-radio-button>
 			<md-radio-button data-ng-value="true">Installed</md-radio-button>
 			<md-radio-button data-ng-value="false">Uninstalled</md-radio-button>
 		</md-radio-group>
 	</div>
+	<br>
+	<div layout="row">
+		<md-checkbox flex ng-model="browseController.isUpdateAvailable" aria-label="Is update available?">UPDATEのみを表示する</md-checkbox>
+		<md-button flex class="md-raised" style="float:left"data-ng-click="updateAllAddons()">全てのアドオンを更新する</md-button>			
+	</div>
+	<br>
 	<div layout="row">
 		<md-radio-group layout="row" ng-model="browseController.sort">
 			<md-radio-button data-ng-value="'name'">名前(昇順)</md-radio-button>
@@ -25,11 +31,7 @@
 		</md-radio-group>
 	</div>
 	</md-card>
-	<div layout="row">
-		<md-input-container>
-			<md-checkbox ng-model="browseController.isUpdateAvailable" aria-label="Is update available?">Is update available?</md-checkbox>
-		</md-input-container>
-	</div>
+
 	<div data-ng-repeat="addon in browseController.addons | orderBy:browseController.sort | filter:{ isUpdateAvailable: browseController.isUpdateAvailable, isInstalled: browseController.isInstalled } | filter:browseController.searchQuery">
 		<addon addon="addon"></addon>
 	</div>
