--- a/views/settings.html
+++ b/views/settings.html
@@ -18,6 +18,7 @@
 			<span data-ng-show="!vm.isValidDirectory();"><p class="error">アドオンをインストールする前に、正しいTree of Saviorのインストールフォルダを指定してください。</p></span>
 		</form>
 	</md-content>
+	<div id="hoge"></div>
 	<h3>インストール履歴を
 		<md-button class="md-warn md-raised" ng-click="vm.resetInstalledAddons();">初期化する</md-button>
 	</h3>
